# eagle_one_test

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
arduino/rc_controller/: rc_controller.ino
include/: ARNavdata.cpp  ARNavdata.h
include/eagle_one_test/: ARNavdata.h  Drone.h  Mode.h  Odometry.h  PIDController.h  Tag.h
launch/: ardrone.launch  ardrone.launch~  eagle_one.launch  keyboard_controller_with_tags.launch  keyboard_controller_with_tags.launch~  video.launch
msg/: Pid_receive.msg  Pid_send.msg  Test.msg
old_files/: CMakeListsOld.txt  Drone.cpp  PIDController.cpp  backandforth.cpp  data_script.sh  drone_controller.py  drone_status.py  follow_mode_test_4dof.py  front_hud.py  keyboard_controller.py  land_forward.py  pid_client.cpp  pid_node.cpp  state_test.py  sub_nav.cpp  tag_dist_test.cpp  takeoff.cpp  takeoff_follow.cpp  test_data.py  test_smach.py  yaw_controller.py
src/: ARNavdata.cpp  Controller.py  Drone.cpp  Emergency.py  Follow.py  Kalman.py  Land.py  Mode.py  Navdata.py  Odometry.cpp  PIDController.cpp  Reacquisition.py  StateMachine.py  Tag.cpp  TakePicture.py  Takeoff.py  bottom_hud.py  control_test.cpp  data_script.sh  draw_bounding_box.py  drone_controller.py  drone_video_display.py  emergency_mode.py  follow_mode.py  follow_mode_test.py  follow_mode_test_4dof.py  forward_takeoff.cpp  hud.py  kalman_filter.py  keyboard_controller.py  keyboard_controller_orig.py  land.py  land_mode.py  main.py  normalize_position.py  picture_test.py  pid_client.cpp  pid_controller.cpp  pid_controller.py  pid_node.cpp  (+32 more)
srv/: Pid.srv  State.srv
